--- a/user/common.html
+++ b/user/common.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header class="">
-            <div class="container d-flex justify-content-between">
+            <div class="container d-flex justify-content-between align-items-center">
                 <h1 id="main-logo">
                     <a href="/"><img src="img/fastcode_logo.png" alt="Fastcode" /><span>fastcode</span></a>
                 </h1>
@@ -22,9 +22,7 @@
                         <li><a href="">고객지원</a></li>
                     </ul>
                 </nav>
-                <form action="">
-                    <input type="text" />
-                </form>
+                <form action="" class="search"><input type="text" placeholder="검색어를 입력하세요" /><i class="fa-solid fa-magnifying-glass"></i></form>
                 <ul class="member-info d-flex">
                     <li>
                         <a href=""><i class="fa-solid fa-cart-shopping"></i><span>cart</span></a>
