--- a/user/common.html
+++ b/user/common.html
@@ -17,21 +17,46 @@
                     <ul class="d-flex">
                         <li><a href="">about us</a></li>
                         <li><a href="">강의</a></li>
-                        <li><a href="">커뮤니티</a></li>
-                        <li><a href="">이벤트</a></li>
-                        <li><a href="">고객지원</a></li>
+                        <li>
+                            <a href="">커뮤니티</a>
+                            <ul class="sub-menu-ft">
+                                <li><a href="">질문/답변</a></li>
+                                <li><a href="">스터디</a></li>
+                                <li><a href="">자유게시판</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="">이벤트</a>
+                            <ul class="sub-menu-ft">
+                                <li><a href="">할인</a></li>
+                                <li><a href="">프리패스</a></li>
+                                <li><a href="">특강</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="">고객지원</a>
+                            <ul class="sub-menu-ft">
+                                <li><a href="">공지사항</a></li>
+                                <li><a href="">문의하기</a></li>
+                                <li><a href="">FAQ</a></li>
+                                <li><a href="">이용가이드</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </nav>
                 <form action="" class="search"><input type="text" placeholder="검색어를 입력하세요" /><i class="fa-solid fa-magnifying-glass"></i></form>
-                <ul class="member-info d-flex">
+                <ul class="member-info d-flex content-text-2">
                     <li>
-                        <a href=""><i class="fa-solid fa-cart-shopping"></i><span>cart</span></a>
+                        <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                        <span>장바구니</span>
                     </li>
                     <li>
-                        <a href=""><i class="fa-solid fa-arrow-right-to-bracket"></i><span>login</span></a>
+                        <a href=""><i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+                        <span>로그인</span>
                     </li>
                     <li>
-                        <a href=""><i class="fa-solid fa-user-plus"></i><span>sign up</span></a>
+                        <a href=""><i class="fa-solid fa-user-plus"></i></a>
+                        <span>회원가입</span>
                     </li>
                 </ul>
             </div>
