푸터 최종 수정

--- a/user/common.html
+++ b/user/common.html
@@ -102,7 +102,7 @@
     <!-- Footer -->
     <footer>
       <div class="container">
-        <div class="footer_top d-flex">
+        <div class="footer_top">
           <ul class="footer_menu d-flex">
             <li class="content-text-2"><a href="#">회사소개</a></li>
             <li class="content-text-2"><a href="#">개인정보처리 방침</a></li>
