카트 수정중

--- a/user/cart/cart.html
+++ b/user/cart/cart.html
@@ -1,56 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>나의 장바구니 | Fastcode</title>
-</head>
-
-<body>
-  <div class="cart_area">
-    <div class="container">
-      <h2>나의 장바구니</h2>
-      <div class="cart_list">
-        <ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>나의 장바구니 | Fastcode</title>
+    <link rel="stylesheet" href="../css/common.css" />
+    <link rel="stylesheet" href="../css/cart.css" />
+  </head>
+  <body>
+    <header class="">
+      <div class="container d-flex justify-content-between align-items-center">
+        <h1 id="main-logo">
+          <a href="/"
+            ><img src="../img/fastcode_logo.png" alt="Fastcode" /><span
+              >fastcode</span
+            ></a
+          >
+        </h1>
+        <nav class="main-menu-ft">
+          <ul class="d-flex">
+            <li><a href="">about us</a></li>
+            <li><a href="">강의</a></li>
+            <li>
+              <a href="">커뮤니티</a>
+              <ul class="sub-menu-ft">
+                <li><a href="">질문/답변</a></li>
+                <li><a href="">스터디</a></li>
+                <li><a href="">자유게시판</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="">이벤트</a>
+              <ul class="sub-menu-ft">
+                <li><a href="">할인</a></li>
+                <li><a href="">프리패스</a></li>
+                <li><a href="">특강</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="">고객지원</a>
+              <ul class="sub-menu-ft">
+                <li><a href="">공지사항</a></li>
+                <li><a href="">문의하기</a></li>
+                <li><a href="">FAQ</a></li>
+                <li><a href="">이용가이드</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+        <form action="" class="search">
+          <input type="text" placeholder="검색어를 입력하세요" /><i
+            class="fa-solid fa-magnifying-glass"
+          ></i>
+        </form>
+        <ul class="member-info d-flex content-text-2">
           <li>
-            <img src="" alt="">
-            <h3>Javascript 입문 기초 문법 강의</h3>
-            <span>50,000원</span>
-            <span>무제한</span>
-            <button class="cart_item_del">삭제</button>
+            <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+            <span>장바구니</span>
           </li>
           <li>
-            <img src="" alt="">
-            <h3>Figma 디자인 기초부터 실전까지 - 실전편</h3>
-            <span>50,000원</span>
-            <span>2023-03-14 - 2023-04-14</span>
-            <button class="cart_item_del">삭제</button>
+            <a href=""><i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+            <span>로그인</span>
+          </li>
+          <li>
+            <a href=""><i class="fa-solid fa-user-plus"></i></a>
+            <span>회원가입</span>
           </li>
         </ul>
       </div>
-      <div class="cart_cal">
-        <h3>쿠폰</h3>
-        <select name="coupon" id="coupon">
-          <option value="" readonly>쿠폰 선택</option>
-          <option value="">회원가입 축하 쿠폰</option>
-        </select>
-        <div class="price">
-          <span>가격</span>
-          <span>100,000원</span>
+    </header>
+    <div class="container">
+      <h2 class="title">나의 장바구니</h2>
+      <div class="cart_area d-flex">
+        <div class="cart_list">
+          <ul>
+            <li class="d-flex">
+              <img src="" alt="" />
+              <div class="cart_list_contents">
+                <h3 class="content-text-1">Javascript 입문 기초 문법 강의</h3>
+                <span class="content-text-1">50,000원</span>
+                <span class="content-text-1">무제한</span>
+              </div>
+              <button class="cart_item_del">삭제</button>
+            </lic>
+            <li class="d-flex">
+              <img src="" alt="" />
+              <div class="cart_list_contents">
+                <h3 class="content-text-1">
+                  Figma 디자인 기초부터 실전까지 - 실전편
+                </h3>
+                <span class="content-text-1">50,000원</span>
+                <span class="content-text-1">2023-03-14 - 2023-04-14</span>
+              </div>
+              <button class="cart_item_del">삭제</button>
+            </li>
+          </ul>
         </div>
-        <div class="discount_price">
-          <span>할인가격</span>
-          <span>10,000원</span>
-        </div>
-        <div class="total_price">
-          <span>총 가격</span>
-          <span>90,000원</span>
-        </div>
+        <form action="">
+          <div class="cart_cal">
+            <h3 class="title">쿠폰</h3>
+            <select name="coupon" id="coupon">
+              <option value="" readonly>쿠폰 선택</option>
+              <option value="">회원가입 축하 쿠폰</option>
+            </select>
+            <div class="price d-flex justify-content-between">
+              <span class="main-menu-ft">가격</span>
+              <span class="main-menu-ft">100,000원</span>
+            </div>
+            <div class="discount_price d-flex justify-content-between">
+              <span class="main-menu-ft">할인가격</span>
+              <span class="main-menu-ft">10,000원</span>
+            </div>
+            <div class="total_price">
+              <h3 class="title">총 가격</h3>
+              <span class="title">90,000원</span>
+            </div>
+            <button class="y-btn big-btn btn-sky">결제하기</button>
+          </div>
+        </form>
       </div>
     </div>
-  </div>
-</body>
-
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="footer_top">
+          <ul class="footer_menu d-flex">
+            <li class="content-text-2"><a href="#">회사소개</a></li>
+            <li class="content-text-2"><a href="#">개인정보처리 방침</a></li>
+            <li class="content-text-2"><a href="#">서비스이용약관</a></li>
+            <li class="content-text-2"><a href="#">취소환불규정</a></li>
+            <li class="content-text-2"><a href="#">자료실</a></li>
+            <li class="content-text-2"><a href="#">고객센터</a></li>
+            <li class="content-text-2"><a href="#">사이트맵</a></li>
+          </ul>
+          <ul class="footer_sns d-flex">
+            <li>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-solid fa-blog"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer_bottom d-flex">
+          <h6 id="main-logo">
+            <a href="#"
+              ><img src="../img/fastcode_logo.png" alt="Fastcode" /><span
+                >fastcode</span
+              ></a
+            >
+          </h6>
+          <div class="footer_contents d-flex">
+            <h5 class="content-title">(주) FASTCODE</h5>
+            <span class="content-text-3"
+              >대표자 김유미 | 사업자 등록 번호 123-45-67890</span
+            >
+            <span class="content-text-3"
+              >주소: 서울 특별시 종로구 수표로 96 국일관드림팰리스 | 이메일:
+              yumi@fastcode.com |전화: 02-1212-1212</span
+            >
+          </div>
+          <div class="footer_copyright">
+            <span class="content-text-3"
+              >Copyright@2023 Fastcode. All Rights reserved</span
+            >
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
