--- a/user/class/myclass.html
+++ b/user/class/myclass.html
@@ -13,7 +13,7 @@
     <div class="container d-flex justify-content-between align-items-center">
       <h1 id="main-logo">
         <a href="/"
-          ><img src="img/fastcode_logo.png" alt="Fastcode" /><span
+          ><img src="../img/fastcode_logo.png" alt="Fastcode" /><span
             >fastcode</span
           ></a
         >
@@ -286,7 +286,7 @@
       <div class="footer_bottom d-flex">
         <h6 id="main-logo">
           <a href="#"
-            ><img src="img/fastcode_logo.png" alt="Fastcode" /><span
+            ><img src="../img/fastcode_logo.png" alt="Fastcode" /><span
               >fastcode</span
             ></a
           >
@@ -309,5 +309,7 @@
       </div>
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+  <script src="../js/common.js"></script>
 </body>
 </html>
