--- a/user/class/class_view.html
+++ b/user/class/class_view.html
@@ -80,6 +80,12 @@
       <a href="#" class="y-btn small-btn btn-sky">수강평 보기</a>
       <a href="myclass.html" class="y-btn small-btn btn-red">강의실</a>
     </div>
+    <div id="lec_review">
+      
+    </div>
+    <div id="lec_list">
+
+    </div>
   </div>
   <div class="top-btn">
     <i class="fa-solid fa-arrow-up"></i>
